--- a/public/nginx_app.conf
+++ b/public/nginx_app.conf
@@ -8,8 +8,7 @@ location @rewriteapp {
     rewrite ^(.*)$ /index.php/$1 last;
 }
 
-location ~ ^/index\.php(/|$) {
+location ~ ^/(index|index_dev)\.php(/|$) {
     try_files @heroku-fcgi @heroku-fcgi;
-    # ensure that /index.php isn't accessible directly, but only through a rewrite
     internal;
 }
