--- a/public/Procfile
+++ b/public/Procfile
@@ -2,4 +2,4 @@ web: vendor/bin/heroku-php-apache2 public/
 
 web: heroku-php-apache2 -C apache_app.conf
 
-web: heroku-php-nginx -C nginx_app.conf
+web: vendor/bin/heroku-php-nginx -C server_conf/nginx.conf web/ 
